...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/compareTwoJobsListview"
                android:layout_width="match_parent"
                android:layout_height="520dp"
                android:clickable="true"
                android:scrollbarSize="3dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
...
